--- a/ApiTester/Resources/IBFiles/MainWindow.xib
+++ b/ApiTester/Resources/IBFiles/MainWindow.xib
@@ -86,7 +86,7 @@
 						<object class="IBUITableView" key="IBUIView" id="838742858">
 							<reference key="NSNextResponder"/>
 							<int key="NSvFlags">274</int>
-							<string key="NSFrame">{{0, 64}, {320, 396}}</string>
+							<string key="NSFrame">{{0, 64}, {320, 376}}</string>
 							<reference key="NSSuperview"/>
 							<reference key="NSWindow"/>
 							<object class="NSColor" key="IBUIBackgroundColor">
@@ -124,7 +124,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<bool key="IBUIClipsSubviews">YES</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<bool key="IBUIAlwaysBounceVertical">YES</bool>
-							<int key="IBUISeparatorStyle">1</int>
 							<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 							<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 							<float key="IBUIRowHeight">70</float>
@@ -260,6 +259,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<int key="objectID">26</int>
 						<reference key="object" ref="838742858"/>
 						<reference key="parent" ref="655765655"/>
+						<string key="objectName">Table View</string>
 					</object>
 				</object>
 			</object>
