add request and response

--- a/ApiTester/Resources/IBFiles/ApiViewController.xib
+++ b/ApiTester/Resources/IBFiles/ApiViewController.xib
@@ -106,14 +106,18 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<int key="NSvFlags">266</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIButton" id="706922405">
+							<object class="IBUIButton" id="952194190">
 								<reference key="NSNextResponder" ref="299959869"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{12, 13}, {18, 19}}</string>
+								<string key="NSFrame">{{12, 12}, {100, 21}}</string>
 								<reference key="NSSuperview" ref="299959869"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="952194190"/>
+								<reference key="NSNextKeyView" ref="298823503"/>
 								<bool key="IBUIOpaque">NO</bool>
+								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
+									<string key="IBUIAccessibilityLabel"/>
+									<integer value="1" key="IBUIAccessibilityTraits"/>
+								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -122,8 +126,10 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<int key="IBUIButtonType">3</int>
-								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+								<int key="IBUIButtonType">1</int>
+								<string key="IBUIHighlightedTitle">Parameters</string>
+								<string key="IBUISelectedTitle">Parameters</string>
+								<string key="IBUINormalTitle">Parameters</string>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="424679368">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -137,26 +143,20 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
 							</object>
-							<object class="IBUIButton" id="952194190">
+							<object class="IBUIButton" id="706922405">
 								<reference key="NSNextResponder" ref="299959869"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{101, 12}, {109, 21}}</string>
+								<string key="NSFrame">{{151, 13}, {18, 19}}</string>
 								<reference key="NSSuperview" ref="299959869"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="298823503"/>
+								<reference key="NSNextKeyView" ref="952194190"/>
 								<bool key="IBUIOpaque">NO</bool>
-								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
-									<string key="IBUIAccessibilityLabel"/>
-									<integer value="1" key="IBUIAccessibilityTraits"/>
-								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<reference key="IBUIFont" ref="1008698434"/>
-								<int key="IBUIButtonType">1</int>
-								<string key="IBUIHighlightedTitle">Parameters</string>
-								<string key="IBUISelectedTitle">Parameters</string>
-								<string key="IBUINormalTitle">Parameters</string>
+								<int key="IBUIButtonType">3</int>
+								<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
 								<reference key="IBUIHighlightedTitleColor" ref="424679368"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -167,7 +167,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<object class="IBUIButton" id="298823503">
 								<reference key="NSNextResponder" ref="299959869"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{220, 12}, {88, 21}}</string>
+								<string key="NSFrame">{{208, 12}, {100, 21}}</string>
 								<reference key="NSSuperview" ref="299959869"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="246933426"/>
@@ -196,9 +196,9 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSMutableArray" key="IBUIItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIBarButtonItem" id="100615631">
+							<object class="IBUIBarButtonItem" id="181628231">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUICustomView" ref="706922405"/>
+								<reference key="IBUICustomView" ref="952194190"/>
 								<reference key="IBUIToolbar" ref="299959869"/>
 							</object>
 							<object class="IBUIBarButtonItem" id="595313294">
@@ -206,10 +206,15 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 								<reference key="IBUIToolbar" ref="299959869"/>
 								<int key="IBUISystemItemIdentifier">5</int>
 							</object>
-							<object class="IBUIBarButtonItem" id="181628231">
+							<object class="IBUIBarButtonItem" id="100615631">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<reference key="IBUICustomView" ref="952194190"/>
+								<reference key="IBUICustomView" ref="706922405"/>
 								<reference key="IBUIToolbar" ref="299959869"/>
+							</object>
+							<object class="IBUIBarButtonItem" id="411287965">
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<reference key="IBUIToolbar" ref="299959869"/>
+								<int key="IBUISystemItemIdentifier">5</int>
 							</object>
 							<object class="IBUIBarButtonItem" id="375549689">
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -273,6 +278,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUISeparatorStyle">1</int>
+						<int key="IBUISelectionStyle">0</int>
 						<reference key="IBUIContentView" ref="457536321"/>
 					</object>
 				</object>
@@ -426,6 +432,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 							<reference ref="375549689"/>
 							<reference ref="100615631"/>
 							<reference ref="595313294"/>
+							<reference ref="411287965"/>
 						</object>
 						<reference key="parent" ref="725614111"/>
 					</object>
@@ -480,6 +487,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<int key="objectID">29</int>
 						<reference key="object" ref="952194190"/>
 						<reference key="parent" ref="181628231"/>
+						<string key="objectName">Button - Parameters</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">32</int>
@@ -499,6 +507,11 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<object class="IBObjectRecord">
 						<int key="objectID">34</int>
 						<reference key="object" ref="595313294"/>
+						<reference key="parent" ref="299959869"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">53</int>
+						<reference key="object" ref="411287965"/>
 						<reference key="parent" ref="299959869"/>
 					</object>
 				</object>
@@ -521,6 +534,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<string>34.IBPluginDependency</string>
 					<string>4.IBEditorWindowLastContentRect</string>
 					<string>4.IBPluginDependency</string>
+					<string>53.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -532,11 +546,12 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<real value="1"/>
+					<real value="0.0"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>{{329, 504}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
@@ -552,7 +567,7 @@ AAMAAAABAAEAAAFTAAMAAAAEAAACAgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">53</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
